feat: basic layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,132 @@
 </head>
 
 <body>
+    <main>
+        <section class="aboutme">
+            <h2>HTML-coder</h2>
+            <h1>Natalia Panakhyd</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, sint incidunt nisi molestiae placeat at veritatis minus repellendus aspernatur omnis architecto dignissimos perferendis accusamus nesciunt sequi ullam magnam aliquam vel.
+            </p>
+        </section>
+        <section class="my-projects">
+            <h3>Projects</h3>
+            <ol>
+                <li>
+                    <a href="http://">project1</a>
+                    <span class="dots">.......</span> [ HTML, CSS ]
+                </li>
+                <li>
+                    <a href="http://">project2</a>
+                    <span class="dots">.......</span> [ HTML, CSS, jQuery ]
+                </li>
+                <li><a href="http://">project3</a>
+                    <span class="dots">.......</span> [ HTML, CSS, JavaScript ]
+                </li>
+                <li><a href="http://">project4</a>
+                    <span class="dots">.......</span> [ JavaScript ]
+                </li>
+                <li><a href="http://">project5</a>
+                    <span class="dots">.......</span> [ React ]
+                </li>
+            </ol>
+        </section>
+        <section class="experience">
+            <h3>Work Experience</h3>
+            <div class="work-description">
+                <h4>Front-end/Web Developer <span>Freelance</span></h4>
+                <p></p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="work-description">
+                <h4>Content Manager <span>Silversprings shop</span></h4>
+                <p></p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="work-description">
+                <h4>Data Entry Operator <span>Pressmaximum</span></h4>
+                <h4>Head of Sales Department <span>Pressmaximum Agency</span></h4>
+                <p></p>
+                <ul>
+                    <li>data entry</li>
+                    <li>accaunting</li>
+                    <li>clients</li>
+                    <li>delivery organization</li>
+                </ul>
+            </div>
+        </section>
+        <section class="education">
+            <h3>Education</h3>
+            <div class="edu-description">
+                <h4><span>RS School</span> Front-end/JavaScript</h4>
+                <p>2020-2021</p>
 
+                <h4><span>SoftServe IT-Academy</span> HTML, CSS, JavaScript
+                </h4>
+                <p>2018</p>
+            </div>
+        </section>
+    </main>
+    <aside>
+        <img src="img/photo.jpg" alt="my photo">
+        <div class="contacts">
+            <h3>Contacts</h3>
+            <ul>
+                <li>
+                    <a href="tel:+380980237903">+380980237903</a>
+                </li>
+                <li>
+                    <a href="mailto:natalycoding@gmail.com">natalycoding@gmail.com</a>
+                </li>
+            </ul>
+        </div>
+        <div class="tech-skills">
+            <h3>Tech Skills</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>SCSS, Sass, Less</li>
+                <li>Bootstrap</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>PHP</li>
+                <li>WordPress</li>
+                <li>Git</li>
+                <li>Gulp</li>
+                <li>WebPack</li>
+                <li>React</li>
+                <li>Node.js</li>
+                <li>Python</li>
+            </ul>
+        </div>
+        <div class="soft-skills">
+            <h3>Soft Skills</h3>
+            <ul>
+                <li>Agile</li>
+                <li>Scrum</li>
+                <li>GTD</li>
+                <li>Teamwork</li>
+            </ul>
+        </div>
+        <div class="languages">
+            <h3>Languages</h3>
+            <ul>
+                <li>English (B2)</li>
+                <li>Polish (A2)</li>
+                <li>Ukrainian (C2)</li>
+                <li>Russian (C1)</li>
+            </ul>
+        </div>
+    </aside>
 
 </body>
 
